fix(styles): fix container min-width on mobile
- Add calculation that includes scrollbar-width to min-width

- Replace depricated map-has-key, map-keys and map-get in scss

--- a/src/shared/styles/_container.scss
+++ b/src/shared/styles/_container.scss
@@ -2,6 +2,6 @@
 .container {
   max-width: $max-width;
   margin: 0 auto;
-  min-width: $min-width;
+  min-width: calc($min-width - (100vw - 100%));
   width: 100%;
 }
